--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<input id="userinput" type="text" placeholder="enter items">
 	<button id="enter">Enter</button>
 	<ul>
-		<li class="bold red"random="23">Notbook</li>
-		<li>Jello<button id="Delete">Delete</button></li>
+		<li class="bold red"random="23">
 		<li>Spinash<button id="Delete">Delete</button> </li>
 		<li>Rice<button id="Delete">Delete</button> </li>
 		<li>Birthday Cake<button id="Delete">Delete</button> </li>
